clipping fix

--- a/packages/core/src/components/toast/toast.scss
+++ b/packages/core/src/components/toast/toast.scss
@@ -57,6 +57,7 @@
       padding: 0.25rem;
 
       .toast-title {
+        min-width: 0;
         margin: 0.25rem 0px;
         overflow-wrap: break-word;
         word-break: break-word;
